# ragbuilder

./: .dockerignore  .env-Sample  Brewfile  Brewfile.lock.json  Brewfilelst.txt  Dockerfile  LICENSE  README.md  READMEold.md  basic_llm_call.ipynb  builder.py  call_invoke.ipynb  code.py  demo copy.yaml  demo.yaml  docker-compose.yml  dockerignore  install.bat  install.sh  pyproject.toml  pyproject_ui.toml  pytest.ini  rag_prompts.yml  ragbuilder_sdk_demo copy 2.ipynb  ragbuilder_sdk_demo copy.ipynb  ragbuilder_sdk_demo.ipynb  ragbuilder_sdk_demo_graph.ipynb  ragbuilder_sdk_demo_server.ipynb  ragbuilder_sdk_retriever.ipynb  requirements.txt  requirements_delete.txt  run copy.ipynb  run.ipynb  run_tests.py  sample_data.txt  sample_questions.txt  setup.py  setup_delete.py  start_server.py  test_minimal.py  (+3 more)
SampleInputFiles/: docs-langsmith-walkthrough.md  docs-modules-agents-quick_start.md
SampleSyntheticDataFiles/: arxiv.783857.sample  lilianweng.sample  rag.sample
byor/: __init__.py
demo/Friends/: friends_golden_data_generator.py  transcript_preprocessor.py
demo/Friends/test/: 0101.html
demo/Friends/transcripts/: 0102.html  0103.html  0104.html  0105.html  0106.html  0107.html  0108.html  0109.html  0110.html  0111.html  0112.html  0113.html  0114.html  0115.html  0116.html  0117.html  0118.html  0119.html  0120.html  0121.html  0122.html  0123.html  0124.html  0201.html  0202.html  0203.html  0204.html  0205.html  0206.html  0207.html  0208.html  0209.html  0210.html  0211.html  0212-0213.html  0214.html  0215.html  0216.html  0217.html  0218.html  (+188 more)
langchain_for_ragas/: docs-get_started-quickstart.md
neo4j/: Dockerfile
src/ragbuilder/: __init__.py  _version.py  analytics.py  custom_components.py  data_processor.py  eval.py  evaldb_dmls.py  executor.py  executor_multi.py  generate_data.py  ragbuilder.py  ragbuilder_flask.py  router.py  sampler.py  test copy.py  test.py  test_run.py
src/ragbuilder/config/: __init__.py  base.py  components.py  data_ingest.py  generation.py  generator.py  retriever.py
src/ragbuilder/core/: __init__.py  builder.py  callbacks.py  config_store.py  document_store.py  exceptions.py  logging_utils.py  results.py  telemetry.py  utils.py
src/ragbuilder/data_ingest/: callbacks.py  components.py  config.py  data_ingest.py  evaluation.py  optimization.py  pipeline.py  retriever.py  utils.py
src/ragbuilder/generation/: __init__.py  components.py  config.py  config.yaml  evaluation copy.py  evaluation.py  gen_system_prompt.py  generate_system_prompt.py  generator.py  new.ipynb  new2.ipynb  optimization.py  optimize-output.yml  pipeline.py  prompt_templates.py  prompts.yaml  rewrite_question.py  run copy.ipynb  run.ipynb  sample_retriever.py  test copy.ipynb  test.ipynb  utils.py
src/ragbuilder/graph_utils/: __init__.py  graph_loader.py  graph_retriever.py
src/ragbuilder/langchain_module/: _version.py  common.py  config.yml
src/ragbuilder/rag_templates/: langchain_templates.py  template_testing.py  top_n_templates.py
src/ragbuilder/retriever/: config.py  evaluation.py  optimization.py  pipeline.py
src/ragbuilder/static/: main.js
src/ragbuilder_ui/: __init__.py
tests/: test_allcombos.py  test_openai_wrapper.py  test_ragbuilder.py  test_ragbuilder_advanced.py  test_ragbuilder_edge_cases.py
tests/test_results/: test_results.json
(+68 files in other folders)
