[project]
name = "ragbuilder"
dynamic = ["version"] 
description = "RagBuilder SDK - Create optimal Production-ready RAG pipelines"
authors = [
    {name = "Ashwin Aravind", email = "ashwin@krux.ai"},
    {name = "Aravind Parameswaran", email = "aravind@krux.ai"},
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "Apache-2.0"}

dependencies = [
    "langchain>=0.1.0",
    "langchain-community",
    "langchain-core==0.2.20",
    "langchain_huggingface",
    "langchain_openai",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
    "optuna",
    "tenacity==8.4.2",
    "pydantic>=2.0.0",
    "python-dotenv",
    "ragas==0.1.7",
    "sentence-transformers",
    "chromadb",
    "rerankers"
]

# Optional dependencies
[project.optional-dependencies]
graph = [
    "neo4j",
    "langchain-community[neo4j]",
    "langchain-core",
]
ui = [
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "jinja2",
]
all = [
    "ragbuilder[graph]",
    "ragbuilder[ui]",
]

[project.scripts]
ragbuilder = "ragbuilder.ragbuilder:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/ragbuilder/_version.py"
version_scheme = "python-simplified-semver"

